# bots-airflow

./: .dockerignore  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: README.md  ci.yml  publish.yml
.tmp_real_test/: inventory_846.edi  sscc.csv
docs/: architecture.md  extract-recorddefs.md  index.md  mapping-in-airflow.md  quickstart.md  release.md  runtime-modules.md  translation-context.md  translation-execution.md
docs/examples/: 846-outbound.md  850-inbound.md
examples/fixtures/: legacy_records004010.py  sample_850.edi
local_runtime/: README.md  __init__.py  dag_mock.py
local_runtime/fixtures/: README.md  legacy_records004010.py  sample_inventory_846.json
local_runtime/grammar/: livingspaces.py  osas.py  pminc.py  x12_4010.py
local_runtime/grammars/: __init__.py
local_runtime/grammars/csv/: __init__.py
local_runtime/grammars/json/: inventory_846_json.py
local_runtime/grammars/x12/: _846_4010_living_spaces.py  _850_ls_inbound4010.py  __init__.py  segments_004010_ls_846.py  segments_004010_ls_850.py
local_runtime/mappings/: __init__.py
local_runtime/mappings/json/: inventory_to_livingspaces_846.py
local_runtime/mappings/x12/: __init__.py
local_runtime/translate/: __init__.py
src/bots_airflow/: __about__.py  __init__.py  _core_discovery.py  _runtime_support.py  bootstrap.py  context.py  dag_mock.py  mapping.py  registry.py  runner.py  specs.py  translator.py
src/bots_airflow/devtools/: __init__.py  extract_recorddefs.py
src/bots_airflow/grammar/: __init__.py  livingspaces.py  osas.py  pminc.py
src/bots_airflow/mappings/: __init__.py
src/bots_airflow/usersys/: __init__.py
tests/: __init__.py  test_api_surface.py  test_bootstrap.py  test_context.py  test_core_discovery.py  test_extract_recorddefs.py  test_mapping_imports.py  test_translations.py
tests/runtime_modules/: __init__.py  legacy_recorddefs.py
(+36 files in other folders)
